5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1791_3140.log
== TEST (2019-05-29 14:54:52) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0

while(i < size(n)):
	m = m + (n[i]**5 / size(n)) ** 1/5
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:34) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0

while(i < size(n)):
	m = m + srt((n[i]**5 / size(n))) **5
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:32) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0

while(i < size(n)):
	m = m + sqrt((n[i]**5 / size(n))) **5
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:57:27) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0

while(i < size(n)):
	m = m + sqrt5((n[i]**5 / size(n)))
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:57:50) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0

while(i < size(n)):
	m = m + sqrt((n[i]**5 / size(n)))
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:26) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0

while(i < size(n)):
	m = m + sqrt((n[i]**5 / size(n)))**5
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:04) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0

while(i < size(n)):
	m = m + sqrt((n[i]**5 / n))**5
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:09:02) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
num = o
while(i < size(n)):
	m = (m + n[i]**5) / size(n)
	num = m ** (1/5)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:09:24) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
num = 0
while(i < size(n)):
	m = (m + n[i]**5) / size(n)
	num = m ** (1/5)
	i = i + 1
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:11) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
soma = (m / size(n)) ** 5
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:23) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
soma = (m / size(n)) ** (1/5)
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:57) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
soma = (m / size(n)) ** (1/5)
print(round(m , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:52) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:17:23) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = media * 5
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:17:58) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = media * 5
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:17:58) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = media * 5
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:17:58) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = media * 5
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:01) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = media * 5
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:18:04) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = media * 5
print(round(m , 2))

-- EXECUTION TIME:
1.26181
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
57516.99
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
19649.83
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
Insira um vetor: 
4937.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:18:04) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = media * 5
print(round(m , 2))

-- EXECUTION TIME:
1.50474
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
57516.99
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
19649.83
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
Insira um vetor: 
4937.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:18:05) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = media * 5
print(round(m , 2))

-- EXECUTION TIME:
2.87419
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
57516.99
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
Insira um vetor: 
19649.83
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
Insira um vetor: 
4937.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:18:05) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = media * 5
print(round(m , 2))

-- EXECUTION TIME:
2.45554
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
57516.99
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
Insira um vetor: 
19649.83
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
Insira um vetor: 
4937.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:47) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = sqrt(5)media
print(round(m , 2))

-- ERROR:
File "XXXX", line 11
    s = sqrt(5)media
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:26) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = sqrt(media)
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:30:34) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	i = i + 1
media = (m / size(n))
s = media **(1/5)
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:33:57) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	media = (m / size(n))
	i = i + 1
s = media **(1/5)
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:34:25) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + n[i]**5
	media = (m / size(n))
	i = i + 1
s = media *(1/5)
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:35:44) 
-- CODE:
from numpy import*
n = array(eval(input("Insira um vetor: \n")))

i = 0
m = 0
soma = 0
while(i < size(n)):
	m = m + (n[i]**5 / n[i])
	i = i + 1
s = m *(1/5)
print(round(m , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
